<resources>
    <string name="app_name">Organic Farm </string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login_bin_label">Login</string>
    <string name="sign_up_text"> New user?Sign Up</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_con_password">Confirm password</string>
    <string name="reg_bin_label">Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="reg_options">
        <item>User</item>
        <item>Vendor</item>
    </string-array>
</resources>
