<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context="com.geometry.vegapp.h_login.login_activity">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">





            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textColor="@color/textColor"
                android:textSize="30dp"
                android:gravity="center"
                android:textStyle="bold"
                android:id="@+id/login_label"
                android:layout_marginTop="5dp"
                />

            <ImageView
                android:id="@+id/user_photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/veg"
                android:contentDescription="@null"
                android:layout_above="@+id/email_login_feild_log_xml"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_email"
                android:id="@+id/email_id_label"
                android:layout_alignParentLeft="true"

                android:textStyle="bold"
                android:textColor="@color/textColor"
                android:textSize="18dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_id_label"
                android:background="@drawable/patched_button"
                android:textColor="@color/textColor"
                android:id="@+id/email_id"
                android:inputType="textEmailAddress"
                android:hint="Enter Email Here" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_password"
                android:id="@+id/passwd_id"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/email_id"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textColor="@color/textColor"
                android:textSize="18dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwd_id"
                android:background="@drawable/patched_button"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:textColor="@color/textColor"


                android:hint="Enter password here" />



            <Button
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/login_bin_label"
                style="?android:textAppearanceSmall"
                android:textStyle="bold"
                android:id="@+id/login_button"
                android:layout_below="@+id/password"
                android:layout_marginTop="35dp"


                android:textColor="#fff"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"


                android:padding="10dp"
                android:background="@drawable/button_bg_round_1"

                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >
                <TextView
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Not Registered? Click here to Register"
                    android:textColor="@color/textColor"
                    android:textSize="18dp"
                    android:gravity="center_horizontal"

                    android:onClick="login_form_xml"
                    android:background="@drawable/patched_button"
                    android:id="@+id/sign_up"

                    android:layout_marginTop="25dp"
                    />



            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>